--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-sqlacodegen==2.0.1
 SQLAlchemy==1.2.17
 azure==4.0.0
-requests==2.22.0
-boto3==1.9.86
-mysqlclient==1.4.1
+pycryptodome==3.9.7
+pycryptodomex==3.9.7
+adal~=1.2.2
