--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ SQLAlchemy==1.2.17
 azure==4.0.0
 pycryptodome==3.9.7
 pycryptodomex==3.9.7
-adal~=1.2.2
+psycopg2-binary==2.8.5
+requests==2.22.0
+adal==1.2.2
